Fix z-index

--- a/NewDecisions/style.css
+++ b/NewDecisions/style.css
@@ -51,8 +51,10 @@ a:hover {
   width: 100%;
   height: 0;
   background-color: rgb(138, 0, 192);
+  z-index: -10;
 }
 .pop-up__content {
+  z-index: -10;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -62,6 +64,7 @@ a:hover {
   flex-direction: column;
   align-items: center;
 }
+
 .pop-text {
   font-size: 40px;
   font-weight: bold;
@@ -71,6 +74,7 @@ a:hover {
 .active-pop {
   opacity: 1;
   height: 100vh;
+  z-index: 1;
 }
 
 /* Стили меню */
